--- a/E-State/EState.UI/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/E-State/EState.UI/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -41,7 +41,7 @@
                 <div class="sidebar-brand-icon rotate-n-15">
                     <i class="fas fa-laugh-wink"></i>
                 </div>
-                <div class="sidebar-brand-text mx-3">SB Admin <sup>2</sup></div>
+                <div class="sidebar-brand-text mx-3">Admin Dashboard</div>
             </a>
 
             <!-- Divider -->
@@ -66,7 +66,7 @@
                 <div id="advert" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
 
-                        <a class="collapse-item" href="buttons.html">Active Components</a>
+                        <a class="collapse-item" asp-area="Admin" asp-controller="Advert" asp-action="Index">Active Components</a>
                         <a class="collapse-item" href="cards.html">Deleted Components</a>
                     </div>
                 </div>
