--- a/E-State/EState.UI/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/E-State/EState.UI/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -26,7 +26,7 @@
     <script src="~/Admin/vendor/jquery/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-    <script src="sweetalert2.all.min.js"></script>
+@*     <script src="sweetalert2.all.min.js"></script> *@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
     <script type="text/javascript" src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
 
