--- a/E-State/EState.UI/Views/Home/Index.cshtml
+++ b/E-State/EState.UI/Views/Home/Index.cshtml
@@ -2,6 +2,13 @@
     ViewData["Title"] = "Home Page";
 }
 
+@* @model IPagedList<Advert>
+@using X.PagedList;
+@using X.PagedList.Web.Common;
+
+@using X.PagedList.Mvc.Core; *@
+@await Component.InvokeAsync("AdvertSlider");
+
 <section class="hero-area">
     <div class="hero-slides owl-carousel">
         <!-- Single Hero Slide -->
@@ -43,262 +50,5 @@
     </div>
 </section>
 
-
-<section class="featured-properties-area section-padding-100-50">
-    <div class="container">
-        <div class="row">
-            <div class="col-12">
-                <div class="section-heading wow fadeInUp">
-                    <h2>Featured Properties</h2>
-                    <p>Suspendisse dictum enim sit amet libero malesuada feugiat.</p>
-                </div>
-            </div>
-        </div>
-
-        <div class="row">
-
-            <!-- Single Featured Property -->
-            <div class="col-12 col-md-6 col-xl-4">
-                <div class="single-featured-property mb-50 wow fadeInUp" data-wow-delay="100ms">
-                    <!-- Property Thumbnail -->
-                    <div class="property-thumb">
-                        <img src="~/EState/img/bg-img/feature1.jpg" alt="">
-
-                        <div class="tag">
-                            <span>For Sale</span>
-                        </div>
-                        <div class="list-price">
-                            <p>$945 679</p>
-                        </div>
-                    </div>
-                    <!-- Property Content -->
-                    <div class="property-content">
-                        <h5>Villa in Los Angeles</h5>
-                        <p class="location"><img src="~/EState/img/icons/location.png" alt="">Upper Road 3411, no.34 CA</p>
-                        <p>Integer nec bibendum lacus. Suspendisse dictum enim sit amet libero malesuada.</p>
-                        <div class="property-meta-data d-flex align-items-end justify-content-between">
-                            <div class="new-tag">
-                                <img src="~/EState/img/icons/new.png" alt="">
-                            </div>
-                            <div class="bathroom">
-                                <img src="~/EState/img/icons/bathtub.png" alt="">
-                                <span>2</span>
-                            </div>
-                            <div class="garage">
-                                <img src="~/EState/img/icons/garage.png" alt="">
-                                <span>2</span>
-                            </div>
-                            <div class="space">
-                                <img src="~/EState/img/icons/space.png" alt="">
-                                <span>120 sq ft</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Single Featured Property -->
-            <div class="col-12 col-md-6 col-xl-4">
-                <div class="single-featured-property mb-50 wow fadeInUp" data-wow-delay="200ms">
-                    <!-- Property Thumbnail -->
-                    <div class="property-thumb">
-                        <img src="~/EState/img/bg-img/feature2.jpg" alt="">
-
-                        <div class="tag">
-                            <span>For Sale</span>
-                        </div>
-                        <div class="list-price">
-                            <p>$945 679</p>
-                        </div>
-                    </div>
-                    <!-- Property Content -->
-                    <div class="property-content">
-                        <h5>Town House in Los Angeles</h5>
-                        <p class="location"><img src="img/icons/location.png" alt="">Upper Road 3411, no.34 CA</p>
-                        <p>Integer nec bibendum lacus. Suspendisse dictum enim sit amet libero malesuada.</p>
-                        <div class="property-meta-data d-flex align-items-end justify-content-between">
-                            <div class="new-tag">
-                                <img src="~/EState/img/icons/new.png" alt="">
-                            </div>
-                            <div class="bathroom">
-                                <img src="~/EState/img/icons/bathtub.png" alt="">
-                                <span>2</span>
-                            </div>
-                            <div class="garage">
-                                <img src="~/EState/img/icons/garage.png" alt="">
-                                <span>2</span>
-                            </div>
-                            <div class="space">
-                                <img src="~/EState/img/icons/space.png" alt="">
-                                <span>120 sq ft</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Single Featured Property -->
-            <div class="col-12 col-md-6 col-xl-4">
-                <div class="single-featured-property mb-50 wow fadeInUp" data-wow-delay="300ms">
-                    <!-- Property Thumbnail -->
-                    <div class="property-thumb">
-                        <img src="~/EState/img/bg-img/feature3.jpg" alt="">
-
-                        <div class="tag">
-                            <span>For Sale</span>
-                        </div>
-                        <div class="list-price">
-                            <p>$945 679</p>
-                        </div>
-                    </div>
-                    <!-- Property Content -->
-                    <div class="property-content">
-                        <h5>Town House in Los Angeles</h5>
-                        <p class="location"><img src="img/icons/location.png" alt="">Upper Road 3411, no.34 CA</p>
-                        <p>Integer nec bibendum lacus. Suspendisse dictum enim sit amet libero malesuada.</p>
-                        <div class="property-meta-data d-flex align-items-end justify-content-between">
-                            <div class="new-tag">
-                                <img src="~/EState/img/icons/new.png" alt="">
-                            </div>
-                            <div class="bathroom">
-                                <img src="~/EState/img/icons/bathtub.png" alt="">
-                                <span>2</span>
-                            </div>
-                            <div class="garage">
-                                <img src="~/EState/img/icons/garage.png" alt="">
-                                <span>2</span>
-                            </div>
-                            <div class="space">
-                                <img src="~/EState/img/icons/space.png" alt="">
-                                <span>120 sq ft</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Single Featured Property -->
-            <div class="col-12 col-md-6 col-xl-4">
-                <div class="single-featured-property mb-50 wow fadeInUp" data-wow-delay="400ms">
-                    <!-- Property Thumbnail -->
-                    <div class="property-thumb">
-                        <img src="~/EState/img/bg-img/feature4.jpg" alt="">
-
-                        <div class="tag">
-                            <span>For Sale</span>
-                        </div>
-                        <div class="list-price">
-                            <p>$945 679</p>
-                        </div>
-                    </div>
-                    <!-- Property Content -->
-                    <div class="property-content">
-                        <h5>Villa in Los Angeles</h5>
-                        <p class="location"><img src="img/icons/location.png" alt="">Upper Road 3411, no.34 CA</p>
-                        <p>Integer nec bibendum lacus. Suspendisse dictum enim sit amet libero malesuada.</p>
-                        <div class="property-meta-data d-flex align-items-end justify-content-between">
-                            <div class="new-tag">
-                                <img src="~/EState/img/icons/new.png" alt="">
-                            </div>
-                            <div class="bathroom">
-                                <img src="~/EState/img/icons/bathtub.png" alt="">
-                                <span>2</span>
-                            </div>
-                            <div class="garage">
-                                <img src="~/EState/img/icons/garage.png" alt="">
-                                <span>2</span>
-                            </div>
-                            <div class="space">
-                                <img src="~/EState/img/icons/space.png" alt="">
-                                <span>120 sq ft</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Single Featured Property -->
-            <div class="col-12 col-md-6 col-xl-4">
-                <div class="single-featured-property mb-50 wow fadeInUp" data-wow-delay="500ms">
-                    <!-- Property Thumbnail -->
-                    <div class="property-thumb">
-                        <img src="~/EState/img/bg-img/feature5.jpg" alt="">
-
-                        <div class="tag">
-                            <span>For Sale</span>
-                        </div>
-                        <div class="list-price">
-                            <p>$945 679</p>
-                        </div>
-                    </div>
-                    <!-- Property Content -->
-                    <div class="property-content">
-                        <h5>Town House in Los Angeles</h5>
-                        <p class="location"><img src="~/EState/img/icons/location.png" alt="">Upper Road 3411, no.34 CA</p>
-                        <p>Integer nec bibendum lacus. Suspendisse dictum enim sit amet libero malesuada.</p>
-                        <div class="property-meta-data d-flex align-items-end justify-content-between">
-                            <div class="new-tag">
-                                <img src="~/EState/img/icons/new.png" alt="">
-                            </div>
-                            <div class="bathroom">
-                                <img src="~/EState/img/icons/bathtub.png" alt="">
-                                <span>2</span>
-                            </div>
-                            <div class="garage">
-                                <img src="~/EState/img/icons/garage.png" alt="">
-                                <span>2</span>
-                            </div>
-                            <div class="space">
-                                <img src="~/EState/img/icons/space.png" alt="">
-                                <span>120 sq ft</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Single Featured Property -->
-            <div class="col-12 col-md-6 col-xl-4">
-                <div class="single-featured-property mb-50 wow fadeInUp" data-wow-delay="600ms">
-                    <!-- Property Thumbnail -->
-                    <div class="property-thumb">
-                        <img src="~/EState/img/bg-img/feature6.jpg" alt="">
-
-                        <div class="tag">
-                            <span>For Sale</span>
-                        </div>
-                        <div class="list-price">
-                            <p>$945 679</p>
-                        </div>
-                    </div>
-                    <!-- Property Content -->
-                    <div class="property-content">
-                        <h5>Town House in Los Angeles</h5>
-                        <p class="location"><img src="~/EState/img/icons/location.png" alt="">Upper Road 3411, no.34 CA</p>
-                        <p>Integer nec bibendum lacus. Suspendisse dictum enim sit amet libero malesuada.</p>
-                        <div class="property-meta-data d-flex align-items-end justify-content-between">
-                            <div class="new-tag">
-                                <img src="~/EState/img/icons/new.png" alt="">
-                            </div>
-                            <div class="bathroom">
-                                <img src="~/EState/img/icons/bathtub.png" alt="">
-                                <span>2</span>
-                            </div>
-                            <div class="garage">
-                                <img src="~/EState/img/icons/garage.png" alt="">
-                                <span>2</span>
-                            </div>
-                            <div class="space">
-                                <img src="~/EState/img/icons/space.png" alt="">
-                                <span>120 sq ft</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-<!-- ##### Featured Properties Area End ##### -->
-<!-- ##### Call To Action Area Start ##### -->
+@await Component.InvokeAsync("AdvertAll")
 
