--- a/E-State/EState.UI/Views/Home/Index.cshtml
+++ b/E-State/EState.UI/Views/Home/Index.cshtml
@@ -7,12 +7,13 @@
 @using X.PagedList.Web.Common;
 
 @using X.PagedList.Mvc.Core; *@
-@await Component.InvokeAsync("AdvertSlider");
+@await Component.InvokeAsync("AdvertSlider")
+@await Html.PartialAsync("~/Views/Home/PartialFiltre.cshtml")
 
 <section class="hero-area">
     <div class="hero-slides owl-carousel">
         <!-- Single Hero Slide -->
-        <div class="single-hero-slide bg-img" style="background-image: url(img/bg-img/hero1.jpg);">
+        <div class="single-hero-slide bg-img" style="background-image: url(~/Admin/img/bg-img/hero1.jpg);">
             <div class="container h-100">
                 <div class="row h-100 align-items-center">
                     <div class="col-12">
@@ -24,7 +25,7 @@
             </div>
         </div>
         <!-- Single Hero Slide -->
-        <div class="single-hero-slide bg-img" style="background-image: url(img/bg-img/hero2.jpg);">
+        <div class="single-hero-slide bg-img" style="background-image: url(~/Admin/img/bg-img/hero2.jpg);">
             <div class="container h-100">
                 <div class="row h-100 align-items-center">
                     <div class="col-12">
@@ -36,7 +37,7 @@
             </div>
         </div>
         <!-- Single Hero Slide -->
-        <div class="single-hero-slide bg-img" style="background-image: url(img/bg-img/hero3.jpg);">
+        <div class="single-hero-slide bg-img" style="background-image: url(~/Admin/img/bg-img/hero3.jpg);">
             <div class="container h-100">
                 <div class="row h-100 align-items-center">
                     <div class="col-12">
