--- a/E-State/EState.UI/Areas/Admin/Views/Advert/Update.cshtml
+++ b/E-State/EState.UI/Areas/Admin/Views/Advert/Update.cshtml
@@ -138,7 +138,7 @@
 
                             <select asp-for="NeighborhoodId" class="form-control">
                                 <option value="0" selected>Seçiniz</option>
-                                @foreach (var item in ViewBag.neighbourhood)
+                                @foreach (var item in ViewBag.neighborhood)
                                 {
                                     <option value="@item.Value">@item.Text</option>
                                 }
