--- a/E-State/EState.UI/Areas/User/_ViewImports.cshtml
+++ b/E-State/EState.UI/Areas/User/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using EState.UI.Areas
 @using EState.UI.Areas.Admin.Models
+@using EState.UI.Areas.User.Models
 @using EntityLayer.Entities
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
