--- a/E-State/EState.UI/Areas/User/Views/Shared/_UserLayout.cshtml
+++ b/E-State/EState.UI/Areas/User/Views/Shared/_UserLayout.cshtml
@@ -1,10 +1,9 @@
-﻿
-@{
+﻿﻿@{
     Layout = null;
 }
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
 
 <head>
 
@@ -20,21 +19,17 @@
     <link href="~/Admin/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
           rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.datatables.net/1.11.5/css/jquery.dataTables.min.css" />
+
     <!-- Custom styles for this template-->
     <link href="~/Admin/css/sb-admin-2.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" />
     <script src="~/Admin/vendor/jquery/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-    @*     <script src="sweetalert2.all.min.js"></script> *@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
-    <script type="text/javascript" src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
 
 </head>
 
 <body id="page-top">
-
     @if (TempData["Success"] != null)
     {
         <script type="text/javascript">
@@ -56,7 +51,6 @@
         </script>
     }
 
-
     <!-- Page Wrapper -->
     <div id="wrapper">
 
@@ -64,11 +58,11 @@
         <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
             <!-- Sidebar - Brand -->
-            <a class="sidebar-brand d-flex align-items-center justify-content-center" asp-area="User" asp-controller="User" asp-action="Index">
+            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
                 <div class="sidebar-brand-icon rotate-n-15">
                     <i class="fas fa-laugh-wink"></i>
                 </div>
-                <div class="sidebar-brand-text mx-3">Admin Dashboard</div>
+                <div class="sidebar-brand-text mx-3">SB Admin <sup>2</sup></div>
             </a>
 
             <!-- Divider -->
@@ -78,9 +72,10 @@
             <li class="nav-item active">
                 <a class="nav-link" href="index.html">
                     <i class="fas fa-fw fa-tachometer-alt"></i>
-                    <span>User Dashboard</span>
+                    <span>Kullanıcı Paneli</span>
                 </a>
             </li>
+
 
 
             <!-- Nav Item - Pages Collapse Menu -->
@@ -88,24 +83,29 @@
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#advert"
                    aria-expanded="true" aria-controls="collapseTwo">
                     <i class="fas fa-fw fa-cog"></i>
-                    <span>Components</span>
+                    <span>İlanlarım</span>
                 </a>
                 <div id="advert" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
 
-                        <a class="collapse-item" asp-area="User" asp-controller="Advert" asp-action="Index">Active Components</a>
-                        <a class="collapse-item" asp-area="User" asp-controller="Advert" asp-action="DeleteList">Deleted Components</a>
+                        <a class="collapse-item" asp-area="User" asp-controller="Advert" asp-action="Index">Aktif İlanlarım</a>
+                        <a class="collapse-item" asp-area="User" asp-controller="Advert" asp-action="DeleteList">Silinen İlanlarım</a>
                     </div>
                 </div>
             </li>
 
-            <!-- Divider -->
+
+
+
+
+            -- Divider -->
             <hr class="sidebar-divider d-none d-md-block">
 
             <!-- Sidebar Toggler (Sidebar) -->
             <div class="text-center d-none d-md-inline">
                 <button class="rounded-circle border-0" id="sidebarToggle"></button>
             </div>
+
 
 
         </ul>
@@ -165,6 +165,7 @@
                         </li>
 
 
+
                         <!-- Nav Item - User Information -->
                         <li class="nav-item dropdown no-arrow">
                             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
@@ -178,11 +179,11 @@
                                  aria-labelledby="userDropdown">
                                 <a class="dropdown-item" asp-area="User" asp-controller="User" asp-action="Profile">
                                     <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
-                                    Profile
+                                    Bilgilerimi Güncelle
                                 </a>
-                                <a class="dropdown-item" href="#">
+                                <a class="dropdown-item" asp-area="User" asp-controller="User" asp-action="ChangePassword">
                                     <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>
-                                    Settings
+                                    Şifre Güncelle
                                 </a>
                                 <a class="dropdown-item" href="#">
                                     <i class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i>
@@ -191,7 +192,7 @@
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
                                     <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
-                                    Logout
+                                    Çıkış Yap
                                 </a>
                             </div>
                         </li>
@@ -202,8 +203,8 @@
                 <!-- End of Topbar -->
                 <!-- /.container-fluid -->
                 @RenderBody()
-            </div>
 
+            </div>
 
 
             <!-- End of Main Content -->
@@ -238,36 +239,28 @@
                         <span aria-hidden="true">×</span>
                     </button>
                 </div>
-                <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
-
-                <!-- LOGOUT-->
-
+                <div class="modal-body">Select "Logout" Çıkış Yapılacak</div>
                 <div class="modal-footer">
                     <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-                    <a class="btn btn-primary" asp-area="User" asp-controller="User" asp-action="LogOut">Logout</a>
+                    <a class="btn btn-primary" asp-area="User" asp-controller="User" asp-action="LogOut">Çıkış Yap</a>
                 </div>
-
-
             </div>
         </div>
     </div>
 
     <!-- Bootstrap core JavaScript-->
-    <script src="~/Admin/vendor/jquery/jquery.min.js"></script>
+
     <script src="~/Admin/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
     <!-- Core plugin JavaScript-->
     <script src="~/Admin/vendor/jquery-easing/jquery.easing.min.js"></script>
-
-    <!-- Custom scripts for all pages-->
     <script src="~/Admin/js/sb-admin-2.min.js"></script>
-
+    <!-- Custom scripts for all pages-->
     <!-- Page level plugins -->
-    <script src="~/Admin/vendor/chart.js/Chart.min.js"></script>
-
+    <!--<script src="~/Admin/vendor/chart.js/Chart.min.js"></script>-->
     <!-- Page level custom scripts -->
-    <script src="~/Admin/js/demo/chart-area-demo.js"></script>
-    <script src="~/Admin/js/demo/chart-pie-demo.js"></script>
+    <!--<script src="~/Admin/js/demo/chart-area-demo.js"></script>
+    <script src="~/Admin/js/demo/chart-pie-demo.js"></script>-->
 
 </body>
 
